--- a/pubnative-interstitials-demo/AndroidManifest.xml
+++ b/pubnative-interstitials-demo/AndroidManifest.xml
@@ -9,12 +9,11 @@
         android:targetSdkVersion="19" />
 
     <uses-permission android:name="android.permission.INTERNET" />
-    
+
     <application
         android:icon="@drawable/icon"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-        
         <activity android:name=".MainActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -22,19 +21,27 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        
-        <activity
-            android:name="net.pubnative.interstitials.PubNativeInterstitialsActivity"
-            android:configChanges="keyboardHidden|orientation|screenSize"
-            android:theme="@style/Theme.PubNativeInterstitials" />
-        
-        <activity
-            android:name=".PubNativeInterstitialsDemoActivity"
-            android:configChanges="keyboardHidden|orientation|screenSize"
-            android:theme="@style/Theme.PubNativeInterstitials" />
-        
         <activity
             android:name=".activity.BannerActivity"
+            android:configChanges="keyboardHidden|orientation|screenSize" />
+        <activity
+            android:name=".activity.CarouselActivity"
+            android:configChanges="keyboardHidden|orientation|screenSize" />
+        <activity
+            android:name=".activity.InFeedVideoActivity"
+            android:configChanges="keyboardHidden|orientation|screenSize" />
+        <activity
+            android:name=".activity.ListItemBriefActivity"
+            android:configChanges="keyboardHidden|orientation|screenSize" />
+        <activity
+            android:name=".activity.ListItemFullActivity"
+            android:configChanges="keyboardHidden|orientation|screenSize" />
+        <activity
+            android:name=".activity.VideoBannerActivity"
+            android:configChanges="keyboardHidden|orientation|screenSize" />
+        <activity
+            android:name="net.pubnative.interstitials.PubNativeInterstitialsActivity"
+            android:theme="@style/Theme.PubNativeInterstitials"
             android:configChanges="keyboardHidden|orientation|screenSize" />
     </application>
 
